--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             color: #4d004d;
         }
 
-        .bio, .education p, .experience p {
+        .bio, .education p {
             color: #4d004d;
             line-height: 1.6;
             margin-bottom: 10px;
@@ -78,6 +78,11 @@
         strong {
             font-weight: bold;
             color: #4d004d;
+        }
+        
+        strong2 {
+            font-weight: bold;
+            color: white;
         }
 
         .social-media {
@@ -154,7 +159,7 @@
 
         /* Display overlay box on logo hover */
         .container2:hover .overlay-box {
-            opacity: 1;
+            opacity: 100;
             pointer-events: auto;     /* Enables interaction when visible */
         }
 
@@ -194,13 +199,13 @@
                 <!-- Centered Overlay Box -->
                 <div class="overlay-box">
                     <span class="close-btn" onclick="event.stopPropagation()">&times;</span>
-                    <p><strong>UI/UX Designer at TravelYaari</strong> Feb 2022 to Present</p>
-                    <p><strong>Government Projects Expertise:</strong> Spearheaded the design of mobile applications and websites for various state government bus services, including Kerala and Karnataka. Delivered user-friendly, efficient solutions tailored to the needs of public transportation systems.</p>
-                    <p><strong>End-to-End Design Solutions:</strong> Developed comprehensive digital experiences for bus and cargo services, ensuring seamless functionality from initial user interaction to final booking and service execution.</p>
-                    <p><strong>B2C Website & Application Design:</strong> Designed seamless and efficient digital solutions for B2C businesses, facilitating smooth and easy operations.</p>
-                    <p><strong>Cross-Functional Collaboration:</strong> Worked closely with stakeholders and developers to ensure the delivery of user-friendly, accessible products.</p>
-                    <p><strong>Prototyping & Wireframing:</strong> Created wireframes and interactive prototypes to visualize and iterate on design concepts.</p>
-                    <p><strong>Usability Testing:</strong> Conducted extensive user testing sessions to validate design decisions and improve product usability.</p>
+                    <p><strong2>UI/UX Designer at TravelYaari</strong2> Feb 2022 to Present</p>
+                    <p><strong2>Government Projects Expertise:</strong2> Spearheaded the design of mobile applications and websites for various state government bus services, including Kerala and Karnataka. Delivered user-friendly, efficient solutions tailored to the needs of public transportation systems.</p>
+                    <p><strong2>End-to-End Design Solutions:</strong2> Developed comprehensive digital experiences for bus and cargo services, ensuring seamless functionality from initial user interaction to final booking and service execution.</p>
+                    <p><strong2>B2C Website & Application Design:</strong2> Designed seamless and efficient digital solutions for B2C businesses, facilitating smooth and easy operations.</p>
+                    <p><strong2>Cross-Functional Collaboration:</strong2> Worked closely with stakeholders and developers to ensure the delivery of user-friendly, accessible products.</p>
+                    <p><strong2>Prototyping & Wireframing:</strong2> Created wireframes and interactive prototypes to visualize and iterate on design concepts.</p>
+                    <p><strong2>Usability Testing:</strong2> Conducted extensive user testing sessions to validate design decisions and improve product usability.</p>
                 </div>
             </div>
 
@@ -211,10 +216,10 @@
                 <!-- Centered Overlay Box -->
                 <div class="overlay-box">
                     <span class="close-btn" onclick="event.stopPropagation()">&times;</span>
-                    <p><strong>UI/UX Designer at Cleartrip:</strong> Aug 2022 to Oct 2022 (3 months)</p>
-                    <p><strong>Client-Centric Design:</strong> Collaborated closely with Cleartrip as a client, leading the design of their bus booking flow for the mobile application to enhance the user experience, delivering a product that met both user needs and client goals.</p>
-                    <p><strong>User Journey Analysis:</strong> Conducted in-depth user behavior analysis to identify pain points and opportunities, leading to a design that reduced friction and improved overall user satisfaction.</p>
-                    <p><strong>Responsive & Accessible Design:</strong> Ensured the design was fully responsive and accessible, providing a consistent and user-friendly experience across all devices.</p>
+                    <p><strong2>UI/UX Designer at Cleartrip:</strong2> Aug 2022 to Oct 2022 (3 months)</p>
+                    <p><strong2>Client-Centric Design:</strong2> Collaborated closely with Cleartrip as a client, leading the design of their bus booking flow for the mobile application to enhance the user experience, delivering a product that met both user needs and client goals.</p>
+                    <p><strong2>User Journey Analysis:</strong2> Conducted in-depth user behavior analysis to identify pain points and opportunities, leading to a design that reduced friction and improved overall user satisfaction.</p>
+                    <p><strong2>Responsive & Accessible Design:</strong2> Ensured the design was fully responsive and accessible, providing a consistent and user-friendly experience across all devices.</p>
                 </div>
             </div>
 
@@ -225,9 +230,9 @@
                 <!-- Centered Overlay Box -->
                 <div class="overlay-box">
                     <span class="close-btn" onclick="event.stopPropagation()">&times;</span>
-                    <p><strong>Intern Graphic Designer at Unfinance:</strong></p>
-                    <p><strong>Community Engagement:</strong> Designed user interfaces and graphics for India's leading community of millennial investors, increasing user interaction and participation.</p>
-                    <p><strong>Visual Design for Promotions:</strong> Developed visual designs for promotional campaigns that significantly increased engagement and awareness.</p>
+                    <p><strong2>Intern Graphic Designer at Unfinance:</strong2></p>
+                    <p><strong2>Community Engagement:</strong2> Designed user interfaces and graphics for India's leading community of millennial investors, increasing user interaction and participation.</p>
+                    <p><strong2>Visual Design for Promotions:</strong2> Developed visual designs for promotional campaigns that significantly increased engagement and awareness.</p>
                 </div>
             </div>
         </div>
