--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <a href="https://www.linkedin.com/in/vidushi-tiwari-6422641b5/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
                 <a href="https://www.instagram.com/vidushi.20/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 <a href="mailto:vidushitiwari191@gmail.com"><img src="email.png" alt="GitHub"></a>
-                 <a href="tel:+1234567890" class="call-link" ><img src="call.png"></a>
+                 <a href="tel:9981610291" class="call-link" ><img src="call.png"></a>
         
     
             </div>
